do not hardcode power level

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,12 @@ edition = "2021"
 [dependencies]
 anyhow = "*"
 tokio = { version = "1", features = [ "full" ] }
-matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "0b9c082e", default-features = false, features = [ "rustls-tls" ] }
 xxhash-rust = { version = "0.8.6", features = [ "xxh3" ] }
 log = "*"
 env_logger = "0.10.0"
+
+[dependencies.matrix-sdk]
+git = "https://github.com/matrix-org/matrix-rust-sdk.git"
+rev = "0b9c082e"
+default-features = false
+features = [ "rustls-tls", "anyhow" ]
