--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ tokio = { version = "1", features = [ "full" ] }
 axum = { version = "0.7.7", features = ["macros"] }
 serde = { version = "1.0.210", features = ["derive"] }
 minijinja = "2.3.1"
+reqwest = { version = "0.12.8", features = ["json", "rustls-tls-webpki-roots"], default-features = false }
 
 [dependencies.matrix-sdk]
 version = "0.7.1"
