--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,14 @@ minijinja = "2.3.1"
 reqwest = { version = "0.12.8", features = ["json", "rustls-tls-webpki-roots"], default-features = false }
 clap = { version = "4.5.20", features = ["derive", "env"] }
 
-[dependencies.matrix-sdk]
-version = "0.7.1"
+[dependencies.ruma]
+git = "https://github.com/ruma/ruma.git"
+branch = "main"
 default-features = false
-features = ["rustls-tls", "experimental-sliding-sync"]
+features = ["api", "client", "client-api", "client-ext-client-api", "unstable-msc3266"]
+
+[dependencies.ruma-client]
+git = "https://github.com/ruma/ruma.git"
+branch = "main"
+default-features = false
+features = ["reqwest"]
