--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0.210", features = ["derive"] }
 minijinja = "2.3.1"
 reqwest = { version = "0.12.8", features = ["json", "rustls-tls-webpki-roots"], default-features = false }
 clap = { version = "4.5.20", features = ["derive", "env"] }
+env_logger = "0.11.5"
 
 [dependencies.ruma]
 git = "https://github.com/ruma/ruma.git"
