--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ minijinja = "2.3.1"
 reqwest = { version = "0.12.8", features = ["json", "rustls-tls-webpki-roots"], default-features = false }
 clap = { version = "4.5.20", features = ["derive", "env"] }
 env_logger = "0.11.5"
+log = "0.4.22"
 
 [dependencies.ruma]
 git = "https://github.com/ruma/ruma.git"
