--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ reqwest = { version = "0.12.8", features = ["json", "rustls-tls-webpki-roots"], 
 clap = { version = "4.5.20", features = ["derive", "env"] }
 env_logger = "0.11.5"
 log = "0.4.22"
+oauth2 = "4.4.2"
 
 [dependencies.ruma]
 git = "https://github.com/ruma/ruma.git"
