--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "4.5.20", features = ["derive", "env"] }
 env_logger = "0.11.5"
 log = "0.4.22"
 oauth2 = "4.4.2"
+chrono = "0.4.38"
 
 [dependencies.ruma]
 git = "https://github.com/ruma/ruma.git"
